@@ -77,7 +77,5 @@
 #define	TINO_F_lseek	lseek
 #endif
 
-#define	posix_memalign	tino_diet_posix_memalign
-
 #endif
 #endif
